[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/UI/Slider.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/SliderIndicator.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/SettingsBackground.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/small.fnt" type="BitmapFont" id=4]
[ext_resource path="res://src/ui/map/PauseUI.gd" type="Script" id=5]
[ext_resource path="res://assets/UI/FocusedButton.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/Unchecked.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/Checked.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/Check.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/Banner.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/BackButton.png" type="Texture" id=12]
[ext_resource path="res://assets/UI/BackButtonPressed.png" type="Texture" id=13]
[ext_resource path="res://assets/UI/SliderIndicatorFocused.png" type="Texture" id=14]
[ext_resource path="res://assets/UI/XPBar.png" type="Texture" id=15]
[ext_resource path="res://assets/UI/XPBarColor.png" type="Texture" id=16]

[sub_resource type="StyleBoxTexture" id=7]
content_margin_right = 3.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 12, 12 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 14, 14 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 58, 6 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="PauseUI" type="Control"]
pause_mode = 2
margin_right = 96.0
margin_bottom = 132.0
rect_scale = Vector2( 2, 2 )
focus_mode = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="."]
margin_left = 18.5
margin_top = 21.0
margin_right = 58.5
margin_bottom = 27.0
custom_fonts/font = ExtResource( 4 )
text = "MUSIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="Music"]
margin_left = 44.0
margin_top = -4.0
margin_right = 58.0
margin_bottom = 10.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../VolumeSlider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../SFX/CheckButton")
focus_next = NodePath("../../SFX/CheckButton")
focus_previous = NodePath("../../VolumeSlider")
custom_icons/off = ExtResource( 7 )
custom_icons/on = ExtResource( 8 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="Label" parent="."]
margin_left = 19.0
margin_top = 36.0
margin_right = 59.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 4 )
text = "SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="SFX"]
margin_left = 44.0
margin_top = -4.0
margin_right = 58.0
margin_bottom = 10.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../Music/CheckButton")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../VolumeSlider")
focus_next = NodePath("../../VolumeSlider")
focus_previous = NodePath("../../Music/CheckButton")
custom_icons/off = ExtResource( 7 )
custom_icons/on = ExtResource( 8 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Volume" type="Label" parent="."]
margin_left = 14.0
margin_top = 56.0
margin_right = 82.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 4 )
text = "VOLUME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 19.0
margin_top = 65.5
margin_right = 77.0
margin_bottom = 81.5
focus_neighbour_top = NodePath("../SFX/CheckButton")
focus_neighbour_bottom = NodePath("../Music/CheckButton")
focus_next = NodePath("../Music/CheckButton")
focus_previous = NodePath("../SFX/CheckButton")
custom_icons/grabber_highlight = ExtResource( 14 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 6 )
custom_styles/grabber_area = SubResource( 5 )
max_value = 200.0
step = 5.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 15.0
margin_bottom = 16.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelBar" type="TextureRect" parent="."]
margin_top = 96.0
margin_right = 96.0
margin_bottom = 128.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelBar"]
margin_left = 27.5
margin_top = 5.0
margin_right = 57.5
margin_bottom = 11.0
custom_fonts/font = ExtResource( 4 )
text = "Level"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNumber" type="Label" parent="LevelBar"]
margin_left = 60.0
margin_top = 5.0
margin_right = 80.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 4 )
text = "1"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="TextureRect" parent="LevelBar"]
margin_left = 29.0
margin_top = 14.5
margin_right = 79.0
margin_bottom = 16.5
texture = ExtResource( 16 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LevelBar"]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )

[connection signal="toggled" from="Music/CheckButton" to="." method="_on_MusicCheckButton_toggled"]
[connection signal="toggled" from="SFX/CheckButton" to="." method="_on_SFXCheckButton_toggled"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
